--- a/static/css/input.css
+++ b/static/css/input.css
@@ -44,77 +44,82 @@ option:hover {
 }
 
 /* Base Styles for Markdown in Dark Mode */
-.markdown-body h1,
-.markdown-body h2,
-.markdown-body h3,
-.markdown-body h4,
-.markdown-body h5,
-.markdown-body h6 {
+.prose h1,
+.prose h2,
+.prose h3,
+.prose h4,
+.prose h5,
+.prose h6 {
   @apply text-white font-bold;
 }
 
-.markdown-body h1 {
+.prose h1 {
   @apply text-3xl mt-4 mb-2;
 }
 
-.markdown-body h2 {
+.prose h2 {
   @apply text-2xl mt-4 mb-2;
 }
 
-.markdown-body h3 {
+.prose h3 {
   @apply text-xl mt-4 mb-2;
 }
 
-.markdown-body p {
+.prose p {
   @apply mb-4;
+  @apply text-gray-200;
 }
 
-.markdown-body ul,
-.markdown-body ol {
+.prose ul,
+.prose ol {
   @apply list-disc pl-6 mb-4;
 }
 
-.markdown-body blockquote {
+.prose blockquote {
   @apply border-l-4 border-gray-600 pl-4 italic mb-4 text-gray-200;
 }
 
-.markdown-body code {
+.prose code {
   @apply bg-gray-700 p-1 rounded text-sm text-gray-100;
 }
 
-.markdown-body pre {
+.prose pre {
   @apply bg-gray-900 text-gray-100 p-4 rounded overflow-x-auto mb-4;
 }
 
-.markdown-body table {
+.prose table {
   @apply min-w-full bg-gray-900 text-gray-100;
 }
 
-.markdown-body th,
-.markdown-body td {
-  @apply border border-gray-700 px-4 py-2;
+.prose th,
+.prose td {
+  @apply border border-gray-200 px-4 py-2;
 }
 
-.markdown-body th {
-  @apply bg-gray-800;
+.prose th {
+  @apply bg-gray-200;
 }
 
-.markdown-body img {
+.prose li {
+  @apply text-gray-200;
+}
+
+.prose img {
   @apply max-w-full h-auto rounded mb-4;
 }
 
-.markdown-body video {
+.prose video {
   @apply max-w-full h-auto rounded mb-4;
 }
 
 /* Embeds */
-.markdown-body iframe {
+.prose iframe {
   @apply max-w-full h-auto rounded mb-4;
 }
 
 /* Specific Embeds Styles */
-.markdown-body .youtube,
-.markdown-body .twitter-tweet,
-.markdown-body .github-repo {
+.prose .youtube,
+.prose .twitter-tweet,
+.prose .github-repo {
   @apply max-w-full mb-4;
 }
