--- a/static/css/main.css
+++ b/static/css/main.css
@@ -562,46 +562,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.container{
-  width: 100%;
-}
-
-@media (min-width: 320px){
-  .container{
-    max-width: 320px;
-  }
-}
-
-@media (min-width: 640px){
-  .container{
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px){
-  .container{
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px){
-  .container{
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px){
-  .container{
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px){
-  .container{
-    max-width: 1536px;
-  }
-}
-
 .prose{
   color: var(--tw-prose-body);
   max-width: 65ch;
@@ -1107,44 +1067,13 @@ video {
   margin-bottom: 0;
 }
 
-.sr-only{
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
-.visible{
-  visibility: visible;
-}
-
-.collapse{
-  visibility: collapse;
-}
-
 .static{
   position: static;
 }
 
-.fixed{
-  position: fixed;
-}
-
-.absolute{
-  position: absolute;
-}
-
-.relative{
-  position: relative;
-}
-
-.sticky{
-  position: sticky;
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mx-auto{
@@ -1178,6 +1107,10 @@ video {
 
 .ml-2{
   margin-left: 0.5rem;
+}
+
+.mr-2{
+  margin-right: 0.5rem;
 }
 
 .mr-4{
@@ -1228,16 +1161,8 @@ video {
   display: flex;
 }
 
-.table{
-  display: table;
-}
-
 .grid{
   display: grid;
-}
-
-.contents{
-  display: contents;
 }
 
 .hidden{
@@ -1254,6 +1179,10 @@ video {
 
 .h-48{
   height: 12rem;
+}
+
+.h-56{
+  height: 14rem;
 }
 
 .h-64{
@@ -1292,21 +1221,17 @@ video {
   max-width: 60%;
 }
 
-.flex-grow{
-  flex-grow: 1;
+.max-w-none{
+  max-width: none;
 }
 
-.border-collapse{
-  border-collapse: collapse;
+.flex-grow{
+  flex-grow: 1;
 }
 
 .scale-75{
   --tw-scale-x: .75;
   --tw-scale-y: .75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1349,10 +1274,6 @@ video {
 
 .flex-wrap{
   flex-wrap: wrap;
-}
-
-.content-start{
-  align-content: flex-start;
 }
 
 .items-center{
@@ -1405,12 +1326,28 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
 
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-2xl{
+  border-radius: 1rem;
 }
 
 .rounded-full{
@@ -1423,6 +1360,18 @@ video {
 
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-bl-none{
+  border-bottom-left-radius: 0px;
+}
+
+.rounded-tl-md{
+  border-top-left-radius: 0.375rem;
+}
+
+.rounded-tr-md{
+  border-top-right-radius: 0.375rem;
 }
 
 .border{
@@ -1509,6 +1458,21 @@ video {
   background-color: rgb(124 58 237 / var(--tw-bg-opacity));
 }
 
+.bg-violet-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(91 33 182 / var(--tw-bg-opacity));
+}
+
+.bg-purple-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1582,12 +1546,22 @@ video {
   line-height: 2.25rem;
 }
 
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-\[0\.4rem\]{
   font-size: 0.4rem;
 }
 
 .text-\[0\.7rem\]{
   font-size: 0.7rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm{
@@ -1598,6 +1572,16 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold{
@@ -1614,6 +1598,10 @@ video {
 
 .leading-5{
   line-height: 1.25rem;
+}
+
+.leading-relaxed{
+  line-height: 1.625;
 }
 
 .text-blue-500{
@@ -1636,6 +1624,11 @@ video {
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
+.text-gray-200{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .text-gray-300{
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
@@ -1644,11 +1637,6 @@ video {
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-950{
@@ -1664,11 +1652,6 @@ video {
 .text-red-700{
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity));
-}
-
-.text-rose-500{
-  --tw-text-opacity: 1;
-  color: rgb(244 63 94 / var(--tw-text-opacity));
 }
 
 .text-rose-600{
@@ -1696,6 +1679,36 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-purple-500{
+  --tw-text-opacity: 1;
+  color: rgb(168 85 247 / var(--tw-text-opacity));
+}
+
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-50{
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+
+.text-purple-600{
+  --tw-text-opacity: 1;
+  color: rgb(147 51 234 / var(--tw-text-opacity));
+}
+
+.text-blue-400{
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .text-opacity-70{
   --tw-text-opacity: 0.7;
 }
@@ -1704,6 +1717,10 @@ video {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline{
+  outline-style: solid;
 }
 
 .ring-4{
@@ -1715,10 +1732,6 @@ video {
 .ring-violet-600{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(124 58 237 / var(--tw-ring-opacity));
-}
-
-.filter{
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-all{
@@ -1739,10 +1752,6 @@ video {
 
 .duration-300{
   transition-duration: 300ms;
-}
-
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gradient-border-bottom {
@@ -1784,50 +1793,52 @@ option:hover {
 
 /* Base Styles for Markdown in Dark Mode */
 
-.markdown-body h1,
-.markdown-body h2,
-.markdown-body h3,
-.markdown-body h4,
-.markdown-body h5,
-.markdown-body h6{
+.prose h1,
+.prose h2,
+.prose h3,
+.prose h4,
+.prose h5,
+.prose h6{
   font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.markdown-body h1{
+.prose h1{
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
 
-.markdown-body h2{
+.prose h2{
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   font-size: 1.5rem;
   line-height: 2rem;
 }
 
-.markdown-body h3{
+.prose h3{
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.markdown-body p{
+.prose p{
   margin-bottom: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
-.markdown-body ul,
-.markdown-body ol{
+.prose ul,
+.prose ol{
   margin-bottom: 1rem;
   list-style-type: disc;
   padding-left: 1.5rem;
 }
 
-.markdown-body blockquote{
+.prose blockquote{
   margin-bottom: 1rem;
   border-left-width: 4px;
   --tw-border-opacity: 1;
@@ -1838,7 +1849,7 @@ option:hover {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
-.markdown-body code{
+.prose code{
   border-radius: 0.25rem;
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
@@ -1849,7 +1860,7 @@ option:hover {
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
-.markdown-body pre{
+.prose pre{
   margin-bottom: 1rem;
   overflow-x: auto;
   border-radius: 0.25rem;
@@ -1860,7 +1871,7 @@ option:hover {
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
-.markdown-body table{
+.prose table{
   min-width: 100%;
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
@@ -1868,30 +1879,35 @@ option:hover {
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
-.markdown-body th,
-.markdown-body td{
+.prose th,
+.prose td{
   border-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.markdown-body th{
+.prose th{
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.markdown-body img{
+.prose li{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.prose img{
   margin-bottom: 1rem;
   height: auto;
   max-width: 100%;
   border-radius: 0.25rem;
 }
 
-.markdown-body video{
+.prose video{
   margin-bottom: 1rem;
   height: auto;
   max-width: 100%;
@@ -1900,7 +1916,7 @@ option:hover {
 
 /* Embeds */
 
-.markdown-body iframe{
+.prose iframe{
   margin-bottom: 1rem;
   height: auto;
   max-width: 100%;
@@ -1909,9 +1925,9 @@ option:hover {
 
 /* Specific Embeds Styles */
 
-.markdown-body .youtube,
-.markdown-body .twitter-tweet,
-.markdown-body .github-repo{
+.prose .youtube,
+.prose .twitter-tweet,
+.prose .github-repo{
   margin-bottom: 1rem;
   max-width: 100%;
 }
@@ -2175,6 +2191,11 @@ option:hover {
   background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-violet-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-violet-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(109 40 217 / var(--tw-bg-opacity));
@@ -2293,12 +2314,16 @@ option:hover {
     margin-left: 1.5rem;
   }
 
-  .md\:w-1\/2{
-    width: 50%;
+  .md\:mt-6{
+    margin-top: 1.5rem;
   }
 
-  .md\:w-1\/3{
-    width: 33.333333%;
+  .md\:h-96{
+    height: 24rem;
+  }
+
+  .md\:w-1\/4{
+    width: 25%;
   }
 
   .md\:w-2\/3{
@@ -2311,5 +2336,13 @@ option:hover {
 
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:rounded-bl-md{
+    border-bottom-left-radius: 0.375rem;
+  }
+
+  .md\:rounded-tr-none{
+    border-top-right-radius: 0px;
   }
 }
