Update CSS styles and footer component

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -4,9 +4,9 @@
     target="_blank"
     class="text-violet-600 font-semibold">Django 5.1</a>.
     </p>
-    <p class="text-center mt-2 flex flex-row justify-center text-blue-600 items-center gap-2">
+    <p class="text-center mt-2 flex flex-row justify-center text-teal-600 font-bold items-center gap-2">
         <span class="flex items-center gap-2">
-            <i class="fa-solid fa-circle text-[0.4rem] animate-ping-status"></i> All systems normal
+            <i class="fa-solid fa-circle text-[0.4rem] animate-ping-status"></i> All systems operational
         </span>
         <span class="text-white ml-2 text-opacity-70 flex items-center gap-1">
             <i class="fa-regular fa-clock text-[0.7rem] animate-spin-clock"></i>
