--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -28,7 +28,26 @@
         {% include "components/social_icon.html" %}
       </ul>
     </div>
-    <h1 class="text-2xl font-semibold mt-10 font-montserrat">From the blogs</h1>
-    <h1 class="text-2xl font-semibold mt-10 font-montserrat">Featured projects</h1>
+    <div class="mt-14 mb-8 flex justify-between">
+      <h1 class="text-2xl font-semibold font-montserrat">Featured projects</h1>
+      <a href="{% url 'projects' %}">
+        <button class="bg-violet-500 hover:bg-purple-600 border-2 border-white border-opacity-20 shadow-lg text-gray-950 font-bold py-1 px-2 sm:py-2 sm:px-4 rounded font-montserrat">
+          View all
+        </button>
+      </a>
+    </div>
+    {% for project in projects %}
+      <a href="projects/{{ project.slug }}">
+        <div class="flex gap-4 mb-6">
+          <img src="{{ project.thumbnail.url }}"
+               alt="{{ project.title }}"
+               class="w-1/6 md:w-1/12 rounded-md object-contain" />
+          <div>
+            <h3 class="text-xl font-semibold text-gray-200 font-montserrat">{{ project.title }}</h3>
+            <p class="text-sm">{{ project.short_description|truncatechars:60 }}</p>
+          </div>
+        </div>
+      </a>
+    {% endfor %}
   </div>
 {% endblock content %}
