--- a/templates/_base.html
+++ b/templates/_base.html
@@ -10,7 +10,7 @@
       {% block title %}{% endblock %}
     - TechRahis</title>
     <meta name="description"
-          content="{% block meta_description %}Default description{% endblock %}" />
+          content="{% block meta_description %}TechRahis.com is a personal website of Rajarshi Samaddar.{% endblock %}" />
     <link rel="shortcut icon"
           href="{% static 'image/favicon.png' %}"
           type="image/x-icon">
