--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -1,8 +1,9 @@
 {% extends "_base.html" %}
 {% block title %}{{ project.title }}{% endblock %}
+{% block meta_description %}{{ project.short_description }}{% endblock %}
 {% block content %}
     <div class="text-white mt-16 sm:mt-14">
-        <h1 class="font-montserrat text-5xl font-bold mb-8 text-center">{{ project.title }}</h1>
+        <h1 class="font-montserrat text-2xl md:text-5xl font-bold mb-8 text-center">{{ project.title }}</h1>
         <img src="{{ project.cover_image.url }}"
              alt="{{ project.title }}"
              class="w-full h-64 md:h-96 object-cover rounded-2xl mb-8">
