--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -29,8 +29,8 @@
     <div class="flex justify-end p-4">
         <button onclick="closeModal()" class="text-white text-3xl">&times;</button>
     </div>
-    <div class="flex justify-center items-center h-full">
-        <div class="text-white text-center">{% include "./header_list.html" %}</div>
+    <div class="flex justify-center pt-20 h-full">
+        <div class="text-white text-center">{% include "./mobile_header_list.html" %}</div>
     </div>
 </div>
 <script>
