--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block title %}Contact{% endblock %}
 {% block content %}
-    <div class="text-white mt-16 sm:mt-14 md:w-2/3">
+    <div class="text-white mt-4 md:mt-16 md:w-2/3">
         <h1 class="font-montserrat text-2xl font-bold mb-4">Contact Me</h1>
         <p class="mb-10 font-opensans">This form is for professional inquiries only. Promotions are not accepted.</p>
         <h3 class="font-inter text-xl font-bold mb-4 flex justify-start items-center gap-2">Let's connect!</h3>
