--- a/core/templates/hire_me.html
+++ b/core/templates/hire_me.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block title %}Hire me{% endblock %}
 {% block content %}
-    <div class="text-white mt-16 sm:mt-14 mb-10">
+    <div class="text-white mt-4 md:mt-16 mb-10">
         <h1 class="font-montserrat text-2xl font-bold mb-4">Hire me</h1>
         <p class="mb-10">
             I'm currently seeking exciting opportunities, both full-time and freelance.  If you're looking for a skilled and motivated professional, I'd love to hear from you. Feel free to reach out with any inquiries, project ideas, or simply to connect!  Fill out the form below and we can start a conversation.
