--- a/templates/components/mobile_header_list.html
+++ b/templates/components/mobile_header_list.html
@@ -15,6 +15,13 @@
         <a href="{% url 'others' %}">Others</a>
     </li>
 </ul>
+<div class="mt-4">
+    <a href="{% url 'hire_me' %}">
+        <button class="bg-violet-500 hover:bg-purple-600 border-2 border-white border-opacity-20 shadow-lg text-gray-950 font-bold py-1 px-2 sm:py-2 sm:px-4 rounded font-montserrat">
+            Hire Me
+        </button>
+    </a>
+</div>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         const currentUrl = window.location.pathname;
