--- a/portfolios/templates/portfolio.html
+++ b/portfolios/templates/portfolio.html
@@ -8,26 +8,30 @@
         </p>
     </div>
     <div class="space-y-8 text-white mb-10">
-        {% for portfolio in portfolios %}
-            <a href="{% url 'portfolio_detail' portfolio.slug %}">
-                <div class="flex flex-col bg-slate-900 rounded-md md:flex-row items-center mb-8 hover:bg-purple-600">
-                    <img src="{{ portfolio.thumbnail.url }}"
-                         alt="{{ portfolio.title }}"
-                         class="w-full md:w-1/4 h-56 rounded-tl-md rounded-tr-md rounded-bl-none md:rounded-tr-none md:rounded-bl-md object-cover mb-4 md:mb-0">
-                    <div class="mt-4 md:mt-6 mb-2 mx-2 md:ml-6">
-                        <h3 class="text-2xl font-montserrat font-semibold mb-4 flex justify-between mr-2 items-center">
-                            {{ portfolio.title }}<i class="fa-solid fa-arrow-right"></i>
-                        </h3>
-                        <p class="text-lg font-bold text-gray-200 mb-2">{{ portfolio.date|date:"F d, Y" }}</p>
-                        <p class="text-gray-200 mb-6">{{ portfolio.short_description|truncatechars:135 }}</p>
-                        <div class="flex flex-wrap">
-                            {% for technology in portfolio.technologies_list %}
-                                <span class="bg-violet-500 text-gray-50 text-xs font-bold font-inter py-1 px-2 rounded-full mr-2 mb-2">{{ technology }}</span>
-                            {% endfor %}
+        {% if portfolios %}
+            {% for portfolio in portfolios %}
+                <a href="{% url 'portfolio_detail' portfolio.slug %}">
+                    <div class="portfolio-item flex flex-col bg-slate-900 rounded-md md:flex-row items-center mb-8 hover:bg-purple-600">
+                        <img src="{{ portfolio.thumbnail.url|default_if_none:'path/to/default-image.jpg' }}"
+                             alt="{{ portfolio.title }}"
+                             class="w-full md:w-1/4 h-56 rounded-tl-md rounded-tr-md rounded-bl-none md:rounded-tr-none md:rounded-bl-md object-cover mb-4 md:mb-0">
+                        <div class="mt-4 md:mt-6 mb-2 mx-2 md:ml-6">
+                            <h3 class="text-2xl font-montserrat font-semibold mb-4 flex justify-between mr-2 items-center">
+                                {{ portfolio.title }}<i class="fa-solid fa-arrow-right"></i>
+                            </h3>
+                            <p class="text-lg font-bold text-gray-200 mb-2">{{ portfolio.date|date:"F d, Y" }}</p>
+                            <p class="text-gray-200 mb-6">{{ portfolio.short_description|truncatechars:135 }}</p>
+                            <div class="flex flex-wrap">
+                                {% for technology in portfolio.technologies_list %}
+                                    <span class="bg-violet-500 text-gray-50 text-xs font-bold font-inter py-1 px-2 rounded-full mr-2 mb-2">{{ technology }}</span>
+                                {% endfor %}
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-        {% endfor %}
+                </a>
+            {% endfor %}
+        {% else %}
+            <p class="text-gray-200">No portfolios available at the moment. Please check back later.</p>
+        {% endif %}
     </div>
 {% endblock %}
