--- a/portfolios/templates/portfolio.html
+++ b/portfolios/templates/portfolio.html
@@ -1,17 +1,32 @@
 {% extends "_base.html" %}
 {% block title %}Portfolios{% endblock %}
+{% block meta_description %}
+    I've been working on a variety of projects over the years. Here are some of the projects I've worked on. Click on a project to learn more about it.
+{% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16">
         <h1 class="font-montserrat text-2xl font-bold mb-4">Portfolios</h1>
-        <p class="mb-10">
+        <p class="mb-4">
             I've been working on a variety of projects over the years. Here are some of the projects I've worked on. Click on a project to learn more about it.
         </p>
+        <div class="flex flex-wrap mb-10">
+            <a href="{% url 'portfolios' %}"
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if not request.GET.category %}bg-purple-600{% endif %}">All</a>
+            <a href="{% url 'portfolios' %}?category=development"
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'development' %}bg-purple-600{% endif %}">Development</a>
+            <a href="{% url 'portfolios' %}?category=design"
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'design' %}bg-purple-600{% endif %}">Design</a>
+            <a href="{% url 'portfolios' %}?category=seo"
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'seo' %}bg-purple-600{% endif %}">SEO</a>
+            <a href="{% url 'portfolios' %}?category=app"
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'app' %}bg-purple-600{% endif %}">Mobile App</a>
+        </div>
     </div>
     <div class="space-y-8 text-white mb-10">
         {% if portfolios %}
             {% for portfolio in portfolios %}
                 <a href="{% url 'portfolio_detail' portfolio.slug %}">
-                    <div class="portfolio-item flex flex-col bg-slate-900 rounded-md md:flex-row items-center mb-8 hover:bg-purple-600">
+                    <div class="portfolio-item flex flex-col bg-slate-900 rounded-md md:flex-row items-center mb-8 border border-violet-600 border-opacity-50 hover:bg-purple-600">
                         <img src="{{ portfolio.thumbnail.url|default_if_none:'path/to/default-image.jpg' }}"
                              alt="{{ portfolio.title }}"
                              class="w-full md:w-1/4 h-56 rounded-tl-md rounded-tr-md rounded-bl-none md:rounded-tr-none md:rounded-bl-md object-cover mb-4 md:mb-0">
