--- a/portfolios/templates/portfolio_detail.html
+++ b/portfolios/templates/portfolio_detail.html
@@ -2,13 +2,13 @@
 {% block title %}{{ portfolio.title }}{% endblock %}
 {% block meta_description %}{{ portfolio.short_description }}{% endblock %}
 {% block content %}
-    <div class="text-white mt-16 sm:mt-14">
+    <div class="text-white mt-4 md:mt-16">
         <!-- Title -->
         <h1 class="font-montserrat text-2xl md:text-5xl font-bold mb-8 text-center">{{ portfolio.title }}</h1>
         <!-- Cover Image -->
         <img src="{{ portfolio.cover_image.url }}"
              alt="{{ portfolio.title }}"
-             class="w-full h-64 md:h-96 object-cover rounded-2xl mb-8">
+             class="w-full h-64 md:h-96 object-cover rounded-2xl mb-8 border-2 border-purple-600">
         <!-- Published Date -->
         <h3 class="text-gray-100 text-xl font-semibold mb-4">Published on {{ portfolio.date|date:"F d, Y" }}</h3>
         <!-- Short Description -->
@@ -35,24 +35,12 @@
                target="_blank">{{ portfolio.source_code_url }}</a>
         {% endif %}
         <!-- Long Description -->
-        <div class="prose w-full max-w-none mt-6 mb-8">{{ portfolio.long_description|safe }}</div>
-        <!-- Client Name (if available) -->
-        {% if portfolio.client_name %}<h3 class="text-gray-100 text-lg font-semibold mb-4">Testimonial</h3>{% endif %}
-        <!-- Client Testimonial (if available) -->
-        {% if portfolio.client_testimonial %}
-            <blockquote class="text-gray-300 italic mb-4 border-l-4 pl-4">
-                {{ portfolio.client_testimonial }} <span class="text-purple-600">- {{ portfolio.client_name }}</span>
-            </blockquote>
-        {% endif %}
+        <div class="prose w-full max-w-none mt-6 mb-16">{{ portfolio.long_description|safe }}</div>
         <!-- Category (if available) -->
         {% if portfolio.category %}
-            <h3 class="text-gray-100 font-semibold mb-4">Category: {{ portfolio.get_category_display }}</h3>
+            <h3 class="text-purple-600 border border-purple-600 px-4 py-2 rounded-md w-fit font-montserrat font-bold mt-12">
+                🛠️ {{ portfolio.get_category_display }}
+            </h3>
         {% endif %}
-        <!-- Project Duration -->
-        {% if portfolio.duration %}
-            <h3 class="text-gray-100 font-semibold mb-4">Duration: {{ portfolio.duration }}</h3>
-        {% endif %}
-        <!-- Project Status -->
-        <h3 class="text-gray-100 font-semibold mb-4">Status: {{ portfolio.get_status_display }}</h3>
     </div>
 {% endblock %}
