--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1165,8 +1165,8 @@ video {
   margin-top: 10vh;
 }
 
-.mt-20{
-  margin-top: 5rem;
+.mb-16{
+  margin-bottom: 4rem;
 }
 
 .block{
@@ -1235,6 +1235,23 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-20{
+  width: 5rem;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .max-w-4xl{
@@ -1400,6 +1417,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
 .rounded-bl-none{
   border-bottom-left-radius: 0px;
 }
@@ -1420,8 +1441,24 @@ video {
   border-width: 2px;
 }
 
+.border-0{
+  border-width: 0px;
+}
+
+.border-l-4{
+  border-left-width: 4px;
+}
+
 .border-t{
   border-top-width: 1px;
+}
+
+.border-b-0{
+  border-bottom-width: 0px;
+}
+
+.border-r-2{
+  border-right-width: 2px;
 }
 
 .border-emerald-400{
@@ -1452,6 +1489,26 @@ video {
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-purple-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(147 51 234 / var(--tw-border-opacity));
+}
+
+.border-rose-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(225 29 72 / var(--tw-border-opacity));
+}
+
+.border-rose-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(244 63 94 / var(--tw-border-opacity));
+}
+
+.border-violet-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(124 58 237 / var(--tw-border-opacity));
 }
 
 .border-opacity-20{
@@ -1504,6 +1561,16 @@ video {
 .bg-violet-600{
   --tw-bg-opacity: 1;
   background-color: rgb(124 58 237 / var(--tw-bg-opacity));
+}
+
+.bg-violet-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(196 181 253 / var(--tw-bg-opacity));
+}
+
+.bg-violet-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 139 250 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-90{
@@ -1562,12 +1629,12 @@ video {
   padding-bottom: 1rem;
 }
 
-.pt-20{
-  padding-top: 5rem;
+.pl-4{
+  padding-left: 1rem;
 }
 
-.pt-4{
-  padding-top: 1rem;
+.pt-20{
+  padding-top: 5rem;
 }
 
 .text-left{
@@ -1642,6 +1709,10 @@ video {
 
 .font-semibold{
   font-weight: 600;
+}
+
+.italic{
+  font-style: italic;
 }
 
 .leading-5{
@@ -1731,6 +1802,26 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-rose-500{
+  --tw-text-opacity: 1;
+  color: rgb(244 63 94 / var(--tw-text-opacity));
+}
+
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-green-600{
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
 .text-opacity-70{
@@ -2024,10 +2115,6 @@ option:hover {
     margin-top: 1.5rem;
   }
 
-  .sm\:mt-16{
-    margin-top: 4rem;
-  }
-
   .sm\:block{
     display: block;
   }
@@ -2139,6 +2226,14 @@ option:hover {
 
   .md\:rounded-tr-none{
     border-top-right-radius: 0px;
+  }
+
+  .md\:border-b-2{
+    border-bottom-width: 2px;
+  }
+
+  .md\:border-r-0{
+    border-right-width: 0px;
   }
 
   .md\:text-5xl{
